--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "types": ["node"],
     "baseUrl": ".",
     "paths": {
@@ -17,11 +18,10 @@
     "lib": ["ESNext", "dom", "dom.iterable"]
   },
   "include": [
-    "src/**/*.vue",
     "src/**/*.ts",
     "src/**/*.tsx",
     "types/**/*.d.ts",
     "../../types/**/*.d.ts"
-  ],
+, "src/App.jsx", "src/index.jsx"  ],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
