--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   },
   "devDependencies": {
     "@types/node": "18.15.10",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@vitejs/plugin-vue": "4.1.0",
-    "@vue/test-utils": "2.3.2",
+    "@types/react": "^18.0.30",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "cross-env": "7.0.3",
     "electron": "23.2.0",
     "electron-builder": "23.6.0",
-    "eslint": "8.36.0",
-    "eslint-plugin-vue": "9.10.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
     "happy-dom": "8.9.0",
     "nano-staged": "0.8.0",
     "playwright": "1.32.1",
@@ -46,11 +47,14 @@
     "typescript": "5.0.2",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.2.1",
-    "vitest": "0.29.8",
-    "vue": "3.2.47",
-    "vue-tsc": "1.2.0"
+    "vitest": "0.29.8"
   },
   "dependencies": {
-    "electron-updater": "5.3.0"
+    "autoprefixer": "^9.8.8",
+    "electron-updater": "5.3.0",
+    "postcss": "^7.0.39",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
